--- a/css/light.css
+++ b/css/light.css
@@ -1,16 +1,3 @@
-<?php include('./config/config.php'); ?>
-<script src="https://kit.fontawesome.com/30ed78d123.js" crossorigin="anonymous"></script>
-<?php
-if($theme = "dark"){
-?>
-<link href="css/dark.css" rel="stylesheet" type="text/css" />
-<?php }else{
-?>
-<link href="css/light.css" rel="stylesheet" type="text/css" />
-<?php } ?>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<!--style>
 /*Navbar*/
 
 *{
@@ -120,7 +107,7 @@ if($theme = "dark"){
 .hero-section{
     width: 100%;
     height: calc(100vh - 120px);
-    background-image: url('../img/header.png');
+    background-image: url('../assets/hero.png');
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -134,6 +121,7 @@ if($theme = "dark"){
 }
 
 .hero-section .sub-heading{
+    animation: flicker 1.5s infinite alternate;
     margin-top: 10px;
     text-align: center;
     color: #fff;
@@ -141,6 +129,29 @@ if($theme = "dark"){
     font-size: 35px;
     font-weight: 300;
 }
+
+/* Flickering animation */
+@keyframes flicker {
+    
+    0%, 18%, 22%, 25%, 53%, 57%, 100% {
+  
+        text-shadow:
+        0 0 4px #fff,
+        0 0 11px #fff,
+        0 0 19px #fff,
+        0 0 40px #0fa,
+        0 0 80px #0fa,
+        0 0 90px #0fa,
+        0 0 100px #0fa,
+        0 0 150px #0fa;
+    
+    }
+    
+    20%, 24%, 55% {        
+        text-shadow: none;
+    }    
+  }
+  
 
 /* Termek slider */
 .product{
@@ -213,6 +224,8 @@ if($theme = "dark"){
     transition: 0.5s;
     cursor: pointer;
     opacity: 0;
+    text-decoration: none;
+    color: black;
 }
 
 .product-card:hover .card-btn{
@@ -283,28 +296,3 @@ if($theme = "dark"){
 .pre-btn:hover img, .nxt-btn:hover img{
     opacity: 1;
 }
-
-</style-->
-<nav class="navbar">
-<div class="nav">
-    <!--img src="img/dark-logo.png" class="brand-logo" alt=""--><h1 style="margin-top: 10px; margin-bottom: 10px;"><span style="color: blue;">My </span>Shop</h1>
-    <div class="nav-items">
-        <div class="search">
-            <input type="text" class="search-box" placeholder="search brand, product">
-            <button class="search-btn">search</button>
-        </div>
-        <!--a href="#"><img src="img/user.png" alt=""></a>
-        <a href="#"><img src="img/cart.png" alt=""></a-->
-        <a href="#" style="color: black;"><i class="fas fa-shopping-cart fa-xl"></i></a>
-    </div>
-</div>
-<ul class="links-container">
-    <li class="link-item"><a href="#" class="link">home</a></li>
-    <li class="link-item"><a href="#" class="link">women</a></li>
-    <li class="link-item"><a href="#" class="link">men</a></li>
-    <li class="link-item"><a href="#" class="link">kids</a></li>
-    <li class="link-item"><a href="#" class="link">accessories</a></li>
-</ul>
-</nav>
-
-
